[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/ItemPedestal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Meshes/itemMesh.tres" type="QuadMesh" id=2]
[ext_resource path="res://Assets/Audio/item-pickup.wav" type="AudioStream" id=3]

[sub_resource type="CylinderMesh" id=4]
top_radius = 3.0
bottom_radius = 3.6
height = 2.4

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.513726, 0.34902, 0.121569, 1 )

[sub_resource type="CylinderShape" id=1]
radius = 3.0
height = 2.4

[sub_resource type="CylinderShape" id=2]
radius = 3.0
height = 4.0

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
params_billboard_mode = 1

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "float"
length = 6.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 2.6, 3, 3.4, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.1, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 1.5, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 0.1, 0 ) ]
}

[sub_resource type="CylinderShape" id=3]
radius = 12.0
height = 16.0

[node name="ItemPedestal" type="Spatial"]
script = ExtResource( 1 )

[node name="Pedestal" type="StaticBody" parent="."]

[node name="Model" type="MeshInstance" parent="Pedestal"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Pedestal"]
shape = SubResource( 1 )

[node name="Item" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="PickupArea" type="Area" parent="Item"]

[node name="CollisionShape" type="CollisionShape" parent="Item/PickupArea"]
shape = SubResource( 2 )

[node name="Model" type="MeshInstance" parent="Item"]
mesh = ExtResource( 2 )
material/0 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item"]
autoplay = "float"
anims/RESET = SubResource( 7 )
anims/float = SubResource( 6 )

[node name="DetailsArea" type="Area" parent="Item"]

[node name="CollisionShape" type="CollisionShape" parent="Item/DetailsArea"]
shape = SubResource( 3 )

[node name="Details" type="Control" parent="Item"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="Item/Details"]
margin_left = 30.0
margin_top = 30.0
margin_right = 410.0
margin_bottom = 215.0

[node name="Name" type="Label" parent="Item/Details/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 360.0
margin_bottom = 14.0
text = "Item Name"

[node name="Effect" type="Label" parent="Item/Details/Panel"]
margin_left = 20.0
margin_top = 55.0
margin_right = 60.0
margin_bottom = 70.0
text = "Item effect."

[node name="Description" type="Label" parent="Item/Details/Panel"]
margin_left = 20.0
margin_top = 95.0
margin_right = 360.0
margin_bottom = 165.0
text = "Item description."

[node name="ItemPedestalAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
